src/bootstrap/src/core/builder/cli_paths/snapshots/x_doc.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: doc
---
[Doc] doc::UnstableBook
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/doc/unstable-book"})
[Doc] doc::UnstableBookGen
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/tools/unstable-book-gen"})
[Doc] doc::TheBook
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/doc/book"})
[Doc] doc::Standalone
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/doc"})
    - Set({"standalone"})
[Doc] doc::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({"library"})
    - Set({"library/alloc"})
    - Set({"library/compiler-builtins/compiler-builtins"})
    - Set({"library/core"})
    - Set({"library/panic_abort"})
    - Set({"library/panic_unwind"})
    - Set({"library/proc_macro"})
    - Set({"library/rustc-std-workspace-core"})
    - Set({"library/std"})
    - Set({"library/std_detect"})
    - Set({"library/sysroot"})
    - Set({"library/test"})
    - Set({"library/unwind"})
[Doc] doc::ErrorIndex
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/tools/error_index_generator"})
[Doc] doc::Nomicon
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/doc/nomicon"})
[Doc] doc::Reference
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/doc/reference"})
[Doc] doc::RustdocBook
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/doc/rustdoc"})
[Doc] doc::RustByExample
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/doc/rust-by-example"})
[Doc] doc::RustcBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/doc/rustc"})
[Doc] doc::CargoBook
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/tools/cargo/doc/book"})
[Doc] doc::ClippyBook
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/tools/clippy/book"})
[Doc] doc::EmbeddedBook
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/doc/embedded-book"})
[Doc] doc::EditionGuide
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/doc/edition-guide"})
[Doc] doc::StyleGuide
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/doc/style-guide"})
[Doc] doc::Releases
    targets: [aarch64-unknown-linux-gnu]
    - Set({"RELEASES.md"})
    - Set({"releases"})
