src/bootstrap/src/core/builder/cli_paths/snapshots/x_install.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: install
---
[Install] install::Docs
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/doc"})
[Install] install::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({"library/std"})
[Install] install::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({"compiler/rustc"})
[Install] install::LlvmTools
    targets: [x86_64-unknown-linux-gnu]
    - Set({"llvm-tools"})
