src/bootstrap/src/core/builder/cli_paths/snapshots/x_setup.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: setup
---
[Setup] setup::Profile
    targets: [aarch64-unknown-linux-gnu]
    - Set({"compiler"})
    - Set({"dist"})
    - Set({"library"})
    - Set({"none"})
    - Set({"tools"})
[Setup] setup::Hook
    targets: [aarch64-unknown-linux-gnu]
    - Set({"hook"})
[Setup] setup::Link
    targets: [aarch64-unknown-linux-gnu]
    - Set({"link"})
[Setup] setup::Editor
    targets: [aarch64-unknown-linux-gnu]
    - Set({"editor"})
