src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_coverage_map.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test coverage-map
---
[Test] test::Coverage
    targets: [aarch64-unknown-linux-gnu]
    - Set({"coverage-map"})
